Fixed image alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,12 @@ body {
 	padding-bottom: 6rem;
 }
 
+img.align-rights {
+	position: static;
+	float:left;
+	padding-left: 8rem;
+}
+
 .fade-in {
 	opacity: 0;
 	
